--- a/src/style/index.less
+++ b/src/style/index.less
@@ -262,6 +262,11 @@ em {
 .clear {
   clear: both;
 }
+
+.animate03 {
+  transition: transform 0.26s;
+}
+
 /* ****全局滚动条样式 ***** */
 /* 滚动条整体部分，其中的属性有width,height,background,border等（就和一个块级元素一样）（位置1） */
 .scroll {
