--- a/src/style/index.less
+++ b/src/style/index.less
@@ -2,11 +2,24 @@ html,
 body,
 #app {
   height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   margin: 0;
   padding: 0;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.wrap {
+  height: 100%;
+  flex: 1;
+}
+
 section.content {
   flex: 1;
 }
@@ -64,7 +77,11 @@ body {
   height: 3px !important;
 }
 a {
+  color: #2d8cf0;
   text-decoration: none;
+  &:hover {
+    color: #57a3f3;
+  }
 }
 li {
   list-style: none;
@@ -168,6 +185,7 @@ main {
 }
 .main {
   flex: 1;
+  width: 100%;
   max-width: 940px;
   margin: 60px auto;
   padding: 0 20px;
