markdown 转 html，语法高亮，留言页面

--- a/src/style/highlight.less
+++ b/src/style/highlight.less
@@ -54,6 +54,7 @@
     margin: 10px 0;
     code {
       margin: 0;
+      line-height: 22px;
     }
   }
   .hljs {
@@ -125,7 +126,7 @@
   .hljs-meta,
   .hljs-selector-id,
   .hljs-title {
-    color: #03A9F4 !important;
+    color: #03a9f4 !important;
   }
   .hljs-built_in,
   .hljs-class .hljs-title {
